# esp32-network-cerbero

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Regole-di-base-per-AI.md  idf_build.sh  idf_clean_build.sh  idf_flash+monitor.ttyACM0.sh  idf_flash.ttyACM0.sh  idf_fullclean_build.sh  idf_menuconfig.sh  idf_monitor.sh  sdkconfig.defaults
components/system_utils/: CMakeLists.txt  system_utils.c
components/system_utils/include/: system_utils.h
main/: CMakeLists.txt  Kconfig.projbuild  diagnostics.c  diagnostics.h  display.c  display.h  event_log.c  event_log.h  login_save.c  login_save.h  main.c  network_check.c  network_check.h  param_persist.c  param_persist.h  params_http.c  params_http.h  sntp.c  sntp.h  status_indicator.c  status_indicator.h  wifi_manager.c  wifi_manager.h
scripts/: clone_project.sh
